--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,20 @@
   <body>
     <div id="app">
       <!-- Javascript, don't fail me now! -->
+      <header role="aesthetic">
+        <h1 class="header__heading">ToDo App</h1>
+      </header>
+      <div id="input">
+        <!-- here is where the input will be made by the user initially -->
+        <form class="todo__form--js">
+          <input type="text" class="todo__input--js">
+          <input type="submit" class="todo__submit--js" value="Add ToDo">
+        </form>
+        <!-- Here we render the ToDos -->
+        <div class="todo__canvas--js">
+          
+        </div>
+      </div>
     </div>
     <!-- This is the app -->
     <script src="app.js"></script>
