App is actually starting to come together

--- a/app/index.html
+++ b/app/index.html
@@ -22,10 +22,12 @@
         </form>
         <!-- Here we render the ToDos -->
         <div class="todo__canvas--js">
-          
+
         </div>
       </div>
     </div>
+    <!-- Load that Font Awesome goodness -->
+    <script src="https://use.fontawesome.com/cdde8b3a0f.js"></script>
     <!-- This is the app -->
     <script src="app.js"></script>
   </body>
