Added some style

--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
+    
     <div id="app">
       <!-- Javascript, don't fail me now! -->
       <header role="aesthetic">
         <h1 class="header__heading">ToDo App</h1>
+        <h2 class="header__subheading">Just another todo list app</h2>
       </header>
       <div id="input">
         <!-- here is where the input will be made by the user initially -->
