Added completed functionality

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    
+
     <div id="app">
       <!-- Javascript, don't fail me now! -->
       <header role="aesthetic">
@@ -25,6 +25,9 @@
         <!-- Here we render the ToDos -->
         <div class="todo__canvas--js">
 
+        </div>
+        <div class="todo__canvas-completed--js">
+          
         </div>
       </div>
     </div>
