--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo App</title>
     <!-- Google Fonts : It's my project and I'll Raleway if I want to; you'd Raleway to if you made this ToDo -->
     <link href="https://fonts.googleapis.com/css?family=Just+Another+Hand|Raleway:100,300,400,400i,600,700,900" rel="stylesheet">
@@ -27,7 +28,7 @@
 
         </div>
         <div class="todo__canvas-completed--js">
-          
+
         </div>
       </div>
     </div>
